[dyad] Renaming the app to Calorel - wrote 5 file(s)

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NutriSnap - Tu Compañero de Salud</title>
-    <meta name="description" content="NutriSnap: Escanea comida, encuentra ejercicios personalizados por edad, completa misiones saludables y descubre planes de dieta. Tu salud en una app." />
-    <meta name="author" content="NutriSnap" />
+    <title>Calorel - Tu Compañero de Salud</title>
+    <meta name="description" content="Calorel: Escanea comida, encuentra ejercicios personalizados por edad, completa misiones saludables y descubre planes de dieta. Tu salud en una app." />
+    <meta name="author" content="Calorel" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="NutriSnap - Tu Compañero de Salud" />
+    <meta property="og:title" content="Calorel - Tu Compañero de Salud" />
     <meta property="og:description" content="Escanea comida, ejercicios personalizados, misiones y planes de dieta en una app fácil de usar" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@NutriSnap" />
+    <meta name="twitter:site" content="@Calorel" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
