[dyad] Actualizando el icono de la aplicación en todas las plataformas. - wrote 13 file(s), deleted 1 file(s)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Calorel - Tu Compañero de Salud</title>
     <meta name="description" content="Calorel: Escanea comida, encuentra ejercicios personalizados por edad, completa misiones saludables y descubre planes de dieta. Tu salud en una app." />
     <meta name="author" content="Calorel" />
+    <link rel="icon" type="image/png" href="/app-icon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
