[dyad] Cambiando color principal a verde lima - wrote 3 file(s)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <!-- Configuración PWA Android -->
     <link rel="manifest" href="/manifest.json">
-    <meta name="theme-color" content="#10b981">
+    <meta name="theme-color" content="#65a30d">
     
     <!-- Configuración PWA iOS (Safari) -->
     <link rel="apple-touch-icon" sizes="180x180" href="/app-icon.png">
